[Bug #19259] `Data#with` should call `initialize` method